--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+.card {
+    cursor: pointer;
+    margin: 5px;
+}
+
+.effectGrow {
+    transition: all .2s ease-in-out;
+}
+
+.effectGrow:hover {
+    transform: scale(1.1);
+}
