Se crea directiva que modifica las tarjetas de las peliculas para mostrar informacián

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
         <h3>{{moviesTheatres[0].type}}</h3>
         <div class="row">
             <div class="col-sm-2" *ngFor="let movie of moviesTheatres | slice:0:12">
-                <div class="card effectGrow" (click)="goDetail(movie)">
-                    <img [src]="movie | noImage" class="card-img-top" alt="...">
+                <div class="card effectGrow" (click)="goDetail(movie)" [appMessage]="movie.release_date | date:'yyyy'">
+                    <img [src]="movie | noImage" class="card-img-top">
                 </div>
             </div>
             &nbsp;
@@ -18,8 +18,8 @@
         <h3>{{moviesPopulary[0].type}}</h3>
         <div class="row">
             <div class="col-sm-2" *ngFor="let movie of moviesPopulary | slice:0:12">
-                <div class="card effectGrow" (click)="goDetail(movie)">
-                    <img [src]="movie | noImage" class="card-img-top" alt="...">
+                <div class="card effectGrow" (click)="goDetail(movie)" [appMessage]="movie.release_date | date:'yyyy'">
+                    <img [src]="movie | noImage" class="card-img-top">
                 </div>
             </div>
             &nbsp;
@@ -40,8 +40,8 @@
                 <button type="button" class="btn btn-outline-danger" (click)="return()">Volver</button>
             </div>
             <div class="col-sm-2" *ngFor="let movie of seeMoreMovies">
-                <div class="card effectGrow" (click)="goDetail(movie)">
-                    <img [src]="movie | noImage" class="card-img-top" alt="...">
+                <div class="card effectGrow" (click)="goDetail(movie)" [appMessage]="movie.release_date | date:'yyyy'">
+                    <img [src]="movie | noImage" class="card-img-top">
                 </div>
             </div>
         </div>
