--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <form class="form-inblock my-2 my-lg-0">
     <div class="row">
-        <input class="col-8 form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="col-3 btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input #termino class="col-8 form-control mr-sm-2" type="search" placeholder="Buscar película" aria-label="Search" (keyup)="searchMovie(termino.value)">
+        <button class="col-3 btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
     </div>
 </form>
