Se agrega funcionalidad para ver detalles de la película seleccionada.

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,1 +1,47 @@
-<p>detail works!</p>
+<div *ngIf="!loading" class="row">
+    <div class="col-6">
+        <ngb-carousel>
+            <ng-template ngbSlide class="img-fluid">
+                <div class="picsum-img-wrapper divBorder" style="background-color: #343a40;">
+                    <div class="imgBackground" [ngStyle]="{'background': 'url(' + urlImageLeading + ') no-repeat center center'}"></div>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide class="img-fluid">
+                <div class="picsum-img-wrapper divBorder" style="background-color: #343a40;">
+                    <div class="imgBackground" [ngStyle]="{'background': 'url(' + urlImageBack + ') no-repeat center center'}"></div>
+                </div>
+                <div class="carousel-caption">
+                    <small class="smallScore">
+                        <label for="">Titulo: {{movieDetail.title}} | Año: {{movieDetail.release_date | date:'yyyy'}} | &nbsp;</label>
+                        <ngb-rating class="score" [max]="5" [rate]="(movieDetail.vote_average/2)" [readonly]="true"></ngb-rating>
+                    </small>
+                </div>
+            </ng-template>
+        </ngb-carousel>
+    </div>
+    <div class="col-6">
+        <div class="col-12 divTab divBorder">{{movieDetail.title}}</div>
+        <br>
+        <ngb-tabset type="pills">
+            <ngb-tab title="Sinopsis">
+                <ng-template ngbTabContent>
+                    <div class="col-12">
+                        <p>{{movieDetail.overview}}</p>
+                    </div>
+                </ng-template>
+            </ngb-tab>
+            <ngb-tab title="Caracteristicas">
+                <ng-template ngbTabContent>
+                    <div class="col-12">
+                        <p>Pagina Web: <a [href]="movieDetail.homepage"> Netflix</a></p>
+                    </div>
+                    <div class="col-12">
+                        <iframe src="https://www.youtube.com/embed/iHhcHTlGtRs" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </ng-template>
+            </ngb-tab>
+        </ngb-tabset>
+    </div>
+</div>
+
+<app-loading class="m-5" *ngIf="loading"></app-loading>
