--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,12 +10,12 @@
                 <a class="nav-link" [routerLink]="['home']">Home</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['search']">Buscar</a>
+                <a class="nav-link" [routerLink]="['search','']">Buscar</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" (ngSubmit)="searchNav(form)" #form="ngForm">
+            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" required name="search" ngModel>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
     </div>
 </nav>
